fix: prevent the page to be too small and having a white space under the footer

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -57,8 +57,8 @@ body {
 #app {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: min-content auto min-content;
-  height: 100%;
+  grid-template-rows: min-content 1fr min-content;
+  min-height: 100vh;
   // overflow-x: hidden;
   box-sizing: border-box;
 }
